Ajuste no "email_from" para aceitar 'espaço'.

--- a/configScrips.properties
+++ b/configScrips.properties
@@ -10,7 +10,7 @@ salutation=yes
 
 [PathSectionEmail]
 nome=email
-email_from=zabbix@monitoring.com
+email_from=<ZABBIX Monitoring>
 smtp_server=smtp.gmail.com:587
 mail_user=SeuEmail@gmail.com
 mail_pass=SuaSenha
