Aprimoramento das funções existentes e criação de novas.

--- a/configScrips.properties
+++ b/configScrips.properties
@@ -9,12 +9,12 @@ ack=yes
 salutation=yes
 
 [PathSectionEmail]
-nome=email
+salutation.email=yes
 email_from=<ZABBIX Monitoring>
 smtp_server=smtp.gmail.com:587
 mail_user=SeuEmail@gmail.com
 mail_pass=SuaSenha
 
 [PathSectionTelegram]
-name=telegram
+salutation.telegram=yes
 path.graph=/tmp
